# PlayPods

./: README.md  micros.sh  scaffold.sh
PlayPods/: .env  .env.development  .env.production  IMPLEMENTATION.md  README.md  package-lock.json  package.json  tsconfig.json
PlayPods-Backend/: .gitignore  README.md
PlayPods-Backend/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
PlayPods-Backend/infrastructure/docker/: docker-compose.yml
PlayPods-Backend/infrastructure/scripts/: install-dependencies.sh  service-manager.sh
PlayPods-Backend/services/api-gateway/: Dockerfile  package.json
PlayPods-Backend/services/api-gateway/src/: app.js
PlayPods-Backend/services/auth-service/: Cargo.toml  Dockerfile
PlayPods-Backend/services/recommendation-service/: requirements.txt
PlayPods-Backend/services/upload-service/: Cargo.toml
PlayPods-Backend/services/upload-service/src/: main.rs
PlayPods-Backend/services/video-service/: Cargo.toml
PlayPods-Backend/services/video-service/src/: main.rs
PlayPods/android/: ExploreScreen.java  FeedViewManager.java  FeedViewReactPackage.java  HomeScreen.java  README.md  ShortsAdapter.java  VideosAdapter.java  app.build.gradle  build.gradle  gradle.properties  native-module-placeholder.gradle  settings.gradle
PlayPods/docs/: ARCHITECTURE.md
PlayPods/ios/: FeedView.podspec  HomeScreen.swift  Info.plist  Podfile  README.md  ShortCell.swift
PlayPods/macos/: CMakeLists.txt  Info.plist  README.md
PlayPods/native-modules/FeedView/: CONTRIBUTING.md  FEED_API.md  README.md
PlayPods/src/: App.tsx
PlayPods/src/components/: index.ts
PlayPods/src/constants/: colors.ts  spacing.ts  typography.ts
PlayPods/src/hooks/: useAuth.js
PlayPods/src/navigation/: AppNavigator.js  AppNavigator.tsx  StackNavigator.js  TabNavigator.js
PlayPods/src/styles/: globalStyles.js
PlayPods/src/types/: index.ts
PlayPods/windows/: CMakeLists.txt  README.md
(+79 files in other folders)
