# Minimal CMakeLists.txt placeholder for macOS native build
# Use this as a starting point if you plan to build a native C++/ObjC macOS app
cmake_minimum_required(VERSION 3.18)
project(PlayPods)

# Example: add an executable (replace sources with real files)
# add_executable(PlayPods MACOSX_BUNDLE src/main.mm)

# Link frameworks or libraries as needed
# target_link_libraries(PlayPods "-framework Cocoa")
